# naive-speculate

./: .gitignore  .pre-commit-config.yaml  config-schema.json  config.example.toml  context.example.json  cspell.json  justfile  project-words.txt  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  no-env-hooks.yml  pre-commit.yml  publish.yml  test.yml  ty.yml  uv.yml  with-env-hooks.yml
docs/: index.md
scripts/: generate_api_reference.py  generate_schema.py
src/naive_speculate/: main.py
src/naive_speculate/config/: __init__.py  external.py  internal.py  load.py  registry.py  strategy.py
src/naive_speculate/dependency/: __init__.py  container.py  make.py  maker.py
src/naive_speculate/draft/: __init__.py  drafter.py  interfaces.py
src/naive_speculate/draft/impl/: drafter.py
src/naive_speculate/draft/impls/: drafter.py
src/naive_speculate/infer/: __init__.py  interfaces.py
src/naive_speculate/infer/impl/inferencer/abstract/: basic.py  chunkwise.py
src/naive_speculate/infer/impl/inferencer/abstract/utils/: collection.py
src/naive_speculate/infer/impl/inferencer/concrete/: qwen3.py
src/naive_speculate/infer/impl/kvcache/: dynamic_cache.py  dynamic_no_update_cache.py
src/naive_speculate/infer/implementations/: base.py  chunkwise.py
src/naive_speculate/infer/implementations/concretes/: qwen.py
src/naive_speculate/infer/implementations/utils/: collection.py  sample.py
src/naive_speculate/infer/impls/inferencer/abstracts/: __init__.py  base.py  basic.py  chunkwise.py  forward_out.py
src/naive_speculate/infer/impls/inferencer/concretes/: qwen.py  qwen3.py
src/naive_speculate/infer/impls/kvcache/: dynamic_cache.py
src/naive_speculate/infer/inferencer/: basic.py  chunkwise.py
src/naive_speculate/infer/inferencer/model/: __init__.py  interface.py  qwen3.py
src/naive_speculate/infer/inferencer/utils/: collection.py
src/naive_speculate/infer/interface/: __init__.py  inferencer.py  kvcache.py  lm.py
src/naive_speculate/infer/interfaces/: __init__.py  protocol.py  types.py
src/naive_speculate/infer/kvcache/: dynamic.py  dynamic_cache.py  dynamic_no_update.py
src/naive_speculate/infer/lm/: __init__.py  qwen3.py
src/naive_speculate/model/: __init__.py  _output.py  qwen.py
src/naive_speculate/models/: __init__.py  qwen.py
src/naive_speculate/modules/: __init__.py  draft.py  verify.py
src/naive_speculate/score/: __init__.py  interfaces.py
src/naive_speculate/score/impl/: scorer.py
src/naive_speculate/score/impls/: scorer.py
src/naive_speculate/speculate/: __init__.py  drafter.py  scorer.py  speculative_decoder.py  utils.py
src/naive_speculate/testing/: __init__.py
src/naive_speculate/testing/infer/: fake_model.py
src/naive_speculate/testing/infer/inferencer/: constants.py  contract.py  fake_inferencer.py  fake_model.py  scenario.py
src/naive_speculate/testing/infer/kvcache/: __init__.py  constants.py  contract.py  contract_tests.py  fake.py  utils.py
src/naive_speculate/testing/infer/lm/: fake.py
src/naive_speculate/utility/: __init__.py  config.py  timer.py
src/naive_speculate/utils/: __init__.py  config.py  context.py  dummy.py  model.py  sample.py  timer.py  tokenizer.py
src/naive_speculate/verify/: __init__.py  verifier.py
tests/: conftest.py  test_drafter.py  test_greedy_match.py  test_model.py  test_speculative_sample.py  test_tokenizer.py
tests/draft/: constants.py  test_drafter.py  test_drafter_multi_rounds.py  test_drafter_one_round.py
tests/misc/: test_tokenizer.py
tests/models/: constants.py  test_inference_consistency.py  test_inference_multi_rounds.py  test_inference_one_round.py
tests/unit/infer/inferencer/: test_basic.py  test_chunkwise.py  test_collection.py
tests/unit/infer/kvcache/: test_dynamic.py  test_dynamic_cache.py  test_dynamic_no_update.py  test_dynamic_no_update_cache.py
tests/unit/utils/: test_sample.py
tests/utils/: test_tokenizer.py
tests/verify/: test_speculative_sample.py  test_verifier.py
