[project]
name = "naive-speculate"
version = "0.1.0"
description = "Naive implementation of speculative decoding"
readme = "README.md"
authors = [
    { name = "VioletsOleander", email = "1377232072@qq.com" }
]
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "huggingface-hub[cli]>=0.36.0",
    "pydantic>=2.12.5",
    "torch>=2.9.1",
    "transformers>=4.57.1",
]

[project.scripts]
spec = "naive_speculate:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "docstring-parser>=0.17.0",
    "pytest>=9.0.1",
    "pytest-repeat>=0.9.4",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "ANN",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "EM",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "PIE",
    "PT",
    "Q",
    "RET",
    "SLF",
    "SIM",
    "SLOT",
    "TID",
    "TC",
    "ARG",
    "PTH",
    "FLY",
    "C90",
    "N",
    "PERF",
    "E",
    "W",
    "DOC",
    "D",
    "F",
    "PGH",
    "PL",
    "UP",
    "FURB",
    "RUF",
    "TRY",
]

ignore = [
    # not requires docstring everywhere
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    # not requires line length limit for docstrings
    "E501",
    # not requires create custom exception class everywhere
    "TRY003",
    # not requires redundant message variable creation in each exception raise
    "EM101",
    "EM102",
    # not requires trailing comma in function arguments
    "COM812",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# allow using asserts in tests
"tests/**" = ["S101"]

[tool.pylint."messages control"]
disable = "all"
enable = ["cyclic-import"]
