[project]
name = "naive-speculate"
version = "0.1.0"
description = "Naive implementation of speculative decoding"
readme = "README.md"
authors = [{ name = "VioletsOleander", email = "1377232072@qq.com" }]
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.12.0",
    "huggingface-hub[cli]>=0.36.0",
    "pydantic>=2.12.5",
    "torch>=2.9.1",
    "transformers>=4.57.1",
]

[project.scripts]
spec = "naive_speculate:main"

# In github actions, use --extra cpu to avoid installing cuda related packages
# because the runners do not have nvidia gpus
#
# cu128 dependency here serves just as a preventer for installing both cpu and cu128 extras simultaneously
# when accidentally using --all-extra
#
# since by now in PyPI, torch default provide cu128 builds for linux platform,
# so using --extra cu128 is equivalent to not using any extra at all on linux platform
[project.optional-dependencies]
cpu = ["torch>=2.9.1"]
cu128 = ["torch>=2.9.1"]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "docstring-parser>=0.17.0",
    "mkdocstrings-python>=2.0.1",
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "pytest-repeat>=0.9.4",
    "zensical>=0.0.15",
]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu128" }]]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", extra = "cpu" }, { index = "pytorch-cu128", extra = "cu128" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "ANN",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "EM",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "PIE",
    "PT",
    "Q",
    "RET",
    "SLF",
    "SIM",
    "SLOT",
    "TID",
    "TC",
    "ARG",
    "PTH",
    "FLY",
    "C90",
    "N",
    "PERF",
    "E",
    "W",
    "DOC",
    "D",
    "F",
    "PGH",
    "PL",
    "UP",
    "FURB",
    "RUF",
    "TRY",
]

ignore = [
    # not requires docstring everywhere
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    # not requires line length limit for docstrings
    "E501",
    # not requires create custom exception class everywhere
    "TRY003",
    # not requires redundant message variable creation in each exception raise
    "EM101",
    "EM102",
    # not requires trailing comma in function arguments
    "COM812",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# allow using asserts in tests
"tests/**" = ["S101"]
# allow using asserts in testing module
"src/naive_speculate/testing/**" = ["S101"]

[tool.pylint."messages control"]
disable = "all"
enable = ["cyclic-import"]

[tool.pytest]
addopts = ["--import-mode=importlib", "-s"]
